--- a/app/src/main/res/layout/activity_end_branch.xml
+++ b/app/src/main/res/layout/activity_end_branch.xml
@@ -4,40 +4,70 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@drawable/main_bg"
     tools:context="com.seaco.seaconeuropsych.EndBranch">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView3" />
-
-    <Button
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Yes3"
+        android:id="@+id/imageView4"
+        android:layout_marginTop="30dp"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/congratulations"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView3"
+        android:text="@string/end_branch_message"
+        android:textSize="28sp"
+        android:layout_centerHorizontal="true"
+        android:gravity="center"
+        android:textColor="@android:color/white"
+        android:layout_below="@+id/imageView4"
+        />
+
+    <Button
+        android:layout_width="400dp"
+        android:layout_height="wrap_content"
+        android:text="@string/end_branch_button_numeric"
         android:id="@+id/button15"
-        android:layout_below="@+id/textView3"
-        android:layout_toRightOf="@+id/textView3"
-        android:layout_toEndOf="@+id/textView3"
+        android:layout_below="@id/textView3"
         android:layout_marginTop="120dp"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/button_green_res"
+        android:textColor="@android:color/white"
+        android:textSize="22sp"
         android:onClick="yesContinue3"/>
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="400dp"
         android:layout_height="wrap_content"
-        android:text="No"
-        android:id="@+id/button16"
-        android:layout_centerVertical="true"
+        android:text="@string/end_branch_button_lights"
+        android:layout_below="@id/button15"
+        android:background="@drawable/button_blue_res"
+        android:id="@+id/button17"
         android:layout_centerHorizontal="true"
-        android:onClick="endActivity"/>
+        android:onClick="yesContinue6"
+        android:textSize="22sp"
+        android:textColor="@android:color/white"/>
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="400dp"
         android:layout_height="wrap_content"
-        android:text="Yes6"
-        android:id="@+id/button17"
-        android:layout_alignTop="@+id/button15"
-        android:layout_toRightOf="@+id/button16"
-        android:layout_toEndOf="@+id/button16"
-        android:onClick="yesContinue6"/>
+        android:text="@string/end_branch_button_save"
+        android:layout_below="@id/button17"
+        android:id="@+id/button16"
+        android:background="@drawable/button_pink_res"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:onClick="endActivity"
+        android:textSize="22sp"
+        android:textColor="@android:color/white"
+        android:fontFamily="fonts/Avenir_Black.ttf"/>
+
+
+
+
 
 </RelativeLayout>
