--- a/app/src/main/res/layout/activity_lights_intro.xml
+++ b/app/src/main/res/layout/activity_lights_intro.xml
@@ -1,21 +1,18 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:label="X"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#dedede"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".NumericStart"
-    tools:ignore="MissingPrefix">
-
-
+    tools:ignore="MissingPrefix"
+    >
 
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:id="@+id/numeric_header"
-        >
-
+        android:layout_marginRight="30dp">
 
         <TextView
             android:layout_marginTop="20dp"
@@ -24,7 +21,7 @@
             android:gravity="start"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="@string/pair_intro_title"
+            android:text="@string/lights_title"
             />
 
         <TextView
@@ -34,30 +31,23 @@
             android:gravity="end"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="@string/seaco"/>
-
-    </RelativeLayout>
+            android:text="@string/seaco"/></RelativeLayout>
 
 
 
-
-    <RelativeLayout
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:gravity="center"
-        android:layout_below="@id/numeric_header"
-        android:paddingTop="10dp"
-        >
+        android:gravity="center">
 
 
 
         <ImageView
-
             android:layout_width="wrap_content"
             android:layout_height="200dp"
             android:id="@+id/imageView_1"
-            android:src="@drawable/numeric_intro"
+            android:src="@drawable/lights_bulb"
             android:layout_gravity="top|center"
             android:layout_centerHorizontal="true"
             />
@@ -70,29 +60,32 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/numeric_title"
+            android:text="@string/lights_title"
             android:id="@+id/textView"
             android:layout_centerHorizontal="true"
             android:textSize="30sp"
             fontPath="fonts/Avenir_Black.ttf"
-            />
+            android:fontFamily="fonts/Avenir_Black.ttf"/>
 
         <TextView
-            android:id="@+id/app_intro"
-            android:text="@string/numeric_intro"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/textView"
-            android:textColor="#000000"
-            android:textSize="22sp"
-            android:gravity="center"
             android:background="#ababab"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
             android:paddingTop="35dp"
-            android:paddingBottom="35dp"/>
+            android:paddingBottom="35dp"
+
+            android:text="@string/lights_start_message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#ff000000"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:layout_below="@+id/textView"
+            android:id = "@+id/prospective_initial_text"
+            android:textSize="20sp"
+            android:layout_centerHorizontal="true"/>
 
 
         <Button android:id="@+id/next_button"
@@ -103,15 +96,27 @@
             android:text="@string/next_button"
             android:gravity="center|center_horizontal|fill_vertical"
             android:layout_gravity="center"
-            android:layout_below="@+id/app_intro"
+            android:layout_below="@+id/prospective_initial_text"
             android:layout_centerHorizontal="true"
-            android:onClick="startNumeric"
+            android:onClick="nextActivity"
             android:textColor="@android:color/white"
-            android:textSize="30sp" />
+            android:textSize="30dp" />
+
+        <Button android:id="@+id/next2_button"
+            android:background="@drawable/button_pink_res"
+            android:layout_marginTop="20dp"
+            android:layout_width="200dp"
+            android:layout_height="80dp"
+            android:text="@string/button_skip"
+            android:gravity="center|center_horizontal|fill_vertical"
+            android:layout_gravity="center"
+            android:layout_below="@+id/next_button"
+            android:layout_centerHorizontal="true"
+            android:onClick="skipActivity"
+            android:textColor="@android:color/white"
+            android:textSize="20dp" />
 
     </RelativeLayout>
 
 
-
-
-</RelativeLayout>
+</FrameLayout>
