--- a/app/src/main/res/layout/activity_numeric_main.xml
+++ b/app/src/main/res/layout/activity_numeric_main.xml
@@ -7,6 +7,37 @@
     tools:context="com.hb.neuropsych_5_numeric.NumericMainActivity">
 
     <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:id="@+id/numeric_header"
+        >
+
+
+        <TextView
+            android:layout_marginTop="20dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:gravity="start"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/pair_intro_title"
+            />
+
+        <TextView
+            android:layout_marginTop="20dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:gravity="end"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/seaco"/>
+
+    </RelativeLayout>
+
+
+    <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:id="@+id/relativeLayout">
@@ -30,23 +61,47 @@
             android:id="@+id/numeric_num"
             android:textColor="#000000"/>
 
-        <TextView
-            android:id="@+id/numeric_countdown_initial"
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="3"
-            android:textSize="50sp"
-            tools:ignore="HardcodedText"
             android:layout_below="@+id/numeric_num"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="48dp" />
+            android:id="@+id/numeric_countdown_rl"
+            android:layout_centerHorizontal="true">
 
-        <ImageView android:id="@+id/numeric_progress"
+            <TextView
+                android:id="@+id/numeric_countdown_initial"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="3"
+                android:textSize="50sp"
+                tools:ignore="HardcodedText"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="48dp" />
+
+            <ImageView android:id="@+id/numeric_progress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/numeric_countdown_initial"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:layout_marginTop="48dp"/>
+
+
+        </RelativeLayout>
+
+
+
+        <TextView
+            android:id="@+id/numeric_helptext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/numeric_countdown_initial"
+            android:text="@string/numeric_helptext"
+            android:textSize="20sp"
+            tools:ignore="HardcodedText"
+            android:layout_below="@id/numeric_countdown_rl"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="-70dp"/>
+            android:layout_marginTop="70dp" />
 
     </RelativeLayout>
 
